--- a/_base.scss
+++ b/_base.scss
@@ -1,4 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Poppins:wght@300&display=swap');
 
 
-// font-family: 'IBM Plex Mono', monospace;
+$color-lime: #BFF245;
+$color-pink: #FF2DA0;
+$color-aqua: #49B6CF;
+$color-blue:#457EC9;
+$color-orange: #E78E57;
+$color-yellow: #E0E40D;
+
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'IBM Plex Mono', monospace;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
+}
+
