--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ body {
 
 .game__container {
   background-color: #BFF245;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
 }
 .game__container .game__score {
@@ -33,14 +33,13 @@ body {
   background-color: white;
   border: solid #FF2DA0 5px;
   border-radius: 20px;
-  margin: 10px auto;
+  margin: auto;
 }
 .game__container .game__section .game__sadfaces {
   display: grid;
   color: #457EC9;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 2vw;
   grid-template-areas: ". sadface__angrycontainer sadface__angrycontainer ." ". sadface__crycontainer1 sadface__crycontainer2 ." "sadface__crycontainer3 sadface__crycontainer4 sadface__crycontainer5 sadface__crycontainer6" "sadface__tearcontainer7 sadface__tearcontainer8 sadface__tearcontainer9 sadface__tearcontainer10" "sadface__tearcontainer11 sadface__tearcontainer12 sadface__tearcontainer13 sadface__tearcontainer14";
 }
 .game__container .game__section .game__sadfaces .winning__message {
@@ -198,14 +197,20 @@ body {
 .game__container .game__button {
   display: flex;
   justify-content: center;
+  background-color: #BFF245;
 }
 .game__container .game__button .game__shootBTN {
-  background-color: #E0E40D;
+  background-color: #FF2DA0;
+  color: #ffff;
+  font-style: bold;
   cursor: pointer;
-  font-size: 30px;
+  font-size: 50px;
+  margin-top: 10px;
+  border-radius: 20px;
+  border: solid 5px #ffff;
 }
 .game__container .game__button .game__shootBTN:hover {
-  background-color: #FF2DA0;
+  background-color: #F90088;
 }
 .game__container .game__restart {
   display: flex;
@@ -216,4 +221,8 @@ body {
   cursor: pointer;
   font-size: 20px;
   margin-top: 10px;
+}
+.game__container .outro {
+  text-align: center;
+  margin-top: 50px;
 }
