added restart button and responsiveness

--- a/_base.scss
+++ b/_base.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Poppins:wght@300&display=swap');
 
 
-$color-lime: #BFF245;
+$color-lime: #15ea4b;
 $color-pink: #FF2DA0;
 $color-aqua: #49B6CF;
 $color-blue:#457EC9;
-$color-orange: #E78E57;
+$color-orange: #ff8200;
 $color-yellow: #E0E40D;
 
 
