--- a/main.css
+++ b/main.css
@@ -12,22 +12,15 @@ body {
 }
 
 .game__container {
-  background-color: #BFF245;
+  background-color: #15ea4b;
   max-width: 100%;
   height: 100%;
 }
-.game__container .game__score {
-  display: flex;
-  justify-content: center;
-  background-color: #E0E40D;
-  width: 40%;
-  margin: auto;
-}
-.game__container .game__score .game__scoretext {
-  font-size: 30px;
-}
-.game__container .game__score .game__scoretotal {
-  font-size: 30px;
+.game__container .intro__container .intro__title {
+  text-align: center;
+  color: #FF2DA0;
+  font-size: 25px;
+  font-weight: bolder;
 }
 .game__container .game__section {
   background-color: white;
@@ -35,23 +28,28 @@ body {
   border-radius: 20px;
   margin: auto;
 }
+.game__container .game__section .winning__div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #ff8200;
+  position: absolute;
+  color: #ffff;
+  margin: 200px auto;
+  height: 300px;
+  text-align: center;
+  border-radius: 20px;
+}
+.game__container .game__section .winning__div i {
+  text-align: center;
+  padding-top: 20px;
+}
 .game__container .game__section .game__sadfaces {
   display: grid;
   color: #457EC9;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   grid-template-areas: ". sadface__angrycontainer sadface__angrycontainer ." ". sadface__crycontainer1 sadface__crycontainer2 ." "sadface__crycontainer3 sadface__crycontainer4 sadface__crycontainer5 sadface__crycontainer6" "sadface__tearcontainer7 sadface__tearcontainer8 sadface__tearcontainer9 sadface__tearcontainer10" "sadface__tearcontainer11 sadface__tearcontainer12 sadface__tearcontainer13 sadface__tearcontainer14";
-}
-.game__container .game__section .game__sadfaces .winning__message {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: #FF2DA0;
-  position: absolute;
-  color: #ffff;
-  margin: 200px auto;
-  height: 300px;
-  display: flex;
 }
 .game__container .game__section .game__sadfaces .sad__faces {
   margin: auto;
@@ -197,14 +195,14 @@ body {
 .game__container .game__button {
   display: flex;
   justify-content: center;
-  background-color: #BFF245;
+  background-color: #15ea4b;
 }
 .game__container .game__button .game__shootBTN {
   background-color: #FF2DA0;
   color: #ffff;
   font-style: bold;
   cursor: pointer;
-  font-size: 50px;
+  font-size: 40px;
   margin-top: 10px;
   border-radius: 20px;
   border: solid 5px #ffff;
@@ -217,12 +215,61 @@ body {
   justify-content: center;
 }
 .game__container .game__restart .game__restartBTN {
-  background-color: #E78E57;
+  background-color: #ff8200;
+  color: #ffff;
   cursor: pointer;
   font-size: 20px;
   margin-top: 10px;
 }
+.game__container .game__restart .game__restartBTN:hover {
+  background-color: #FF9B33;
+}
 .game__container .outro {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 25px;
+}
+
+@media screen and (min-width: 1024px) {
+  .game__container .intro__container .intro__title {
+    text-align: center;
+    color: #FF2DA0;
+    font-size: 80px;
+    font-weight: bolder;
+    padding: 20px;
+  }
+  .game__container .game__section {
+    background-color: white;
+    border: solid #FF2DA0 20px;
+    width: 80%;
+  }
+  .game__container .game__section .winning__message {
+    display: flex;
+    justify-content: center;
+  }
+  .game__container .game__section .winning__message .winning__div {
+    height: 400px;
+    margin: 100px auto;
+    padding: 100px;
+    font-size: 40px;
+  }
+  .game__container .game__section .game__sadfaces i {
+    font-size: 80px;
+  }
+  .game__container .game__button .game__shootBTN {
+    font-size: 60px;
+    margin-top: 20px;
+    border: solid 10px #ffff;
+    padding: 10px;
+  }
+  .game__container .game__button .game__shootBTN:hover {
+    background-color: #F90088;
+  }
+  .game__container .game__restart .game__restartBTN {
+    font-size: 25px;
+    margin-top: 10px;
+  }
+  .game__container .outro {
+    margin-top: 30px;
+    font-weight: bold;
+  }
 }
